initial push, first test

--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -35,7 +35,7 @@
 			LOGIC SOLUTIONS
 		</div>
 		<a href="#middle-view">
-			<div id="view-projects" class="buttons" onclick="test()">VIEW PROJECTS</div>
+			<div id="view-projects" class="buttons">VIEW PROJECTS</div>
 		</a>
 	</div>
 
