--- a/projects/vcf/index.html
+++ b/projects/vcf/index.html
@@ -74,10 +74,10 @@
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right" id="main_navigation_menu">
 							<li class="active"><a href="#header">Home</a></li>
-							<li><a href="#our-story">Our Story</a></li>
-							<li><a href="#our-tilapia">Tialpia</a></li>
-							<li><a href="#our-produce">Produce</a></li>
-							<li><a href="#about">The Team</a></li>		
+							<li><a href="#story">Our Story</a></li>
+							<li><a href="#fish">Tilapia</a></li>
+							<li><a href="#produce">Produce</a></li>
+							<li><a href="#team">The Team</a></li>		
 							<li><a href="#contact">Contact</a></li>
 						</ul>
 					</div>
@@ -96,17 +96,16 @@
 								<!-- Providing Fresh and Nutritious Foods to Diverse Populations -->
 								Providing Fresh and Nutritious Custom Blended Herbs
 							</h2>
-							<div class="wow fadeInUp" data-wow-delay="1.5s"><a onclick="smoothScr.anim('our-story')" class="btn btn-border btn-lg"><i class="fa fa-spinner fa-spin"></i> Explore</a></div>
+							<div class="wow fadeInUp" data-wow-delay="1.5s"><a onclick="smoothScr.anim('story')" class="btn btn-border btn-lg"><i class="fa fa-spinner fa-spin"></i> Explore</a></div>
 						</div>
 					</div>
 		</section>
 		<!-- End Intro Section -->
 
-
-		<!-- Start Our Story Section -->
-		<section id="our-story">
+		<!-- Start Story Section -->
+		<section id="story">
 			<div class="container">
-				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Story</h1>
+				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Story<hr></h1>
 				<div class="row">
 					<div class="container center wow fadeInUp">
 
@@ -120,16 +119,16 @@
 				</div>
 			</div>
 		</section>
-		<!-- End Our Story Section-->
+		<!-- End Story Section-->
 
 		<!-- Start Divider Section -->
 		<section id="divider1" class="divider"></section>
 		<!-- End Divider Section-->
 
-		<!-- Start Our Tilapia Section -->
-		<section id="our-tilapia">
+		<!-- Start Fish Section -->
+		<section id="fish">
 			<div class="container">
-				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Tilapia</h1>
+				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Tilapia<hr></h1>
 				<div class="row">
 					<div class="container center wow fadeInUp">
 
@@ -140,72 +139,16 @@
 				</div>
 			</div>
 		</section>
-		<!-- End Our Tilapia Section-->
+		<!-- End Fish Section-->
 
 		<!-- Start Divider Section -->
 		<section id="divider2" class="divider"></section>
 		<!-- End Divider Section-->
-
-		<!-- Start Services Section -->
-		<!-- <section id="services">
-			<div class="container">
-				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Mission</h1>
-				<div class="row">
-					<div class="col-sm-6 col-md-3 wow fadeInUp">
-						<div class="service-box">
-							<div class="content">
-								<div class="icon-wrapper">
-								<i class="fa fa-leaf"></i>
-								</div>
-								<h2>Who We Are</h2>
-								<p>Verticulture Farms operates aquaponic farms and develops innovative technologies to improve efficiencies. <br><br>
-								We utilize a vertical, multi-trophic ecological design coupled with our technology to increase the health of our systems and economic viability of our farms.
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-3 wow fadeInUp" data-wow-delay=".2s" data-wow-offset="10">
-						<div class="service-box">
-							<div class="content">
-								<div class="icon-wrapper">
-								<i class="fa fa-heart"></i>
-								</div>
-								<h2>Social Mission</h2>
-								<p>We utilize a vertical, multi-trophic ecological design coupled with our technology to increase the health of our systems and economic viability of our farms.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-3 wow fadeInUp" data-wow-delay=".4s" data-wow-offset="10">
-						<div class="service-box">
-							<div class="content">
-								<div class="icon-wrapper">
-								<i class="fa fa-child"></i>
-								</div>
-								<h2>Community</h2>
-								<p>Building farms is only one part of our mission as a company. As we expand, our goal is to support and build our surrounding communities. We aim to offer healthy, affordable food and focus on outreach and education to train the next generation of urban agriculture professionals. </p>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-3 wow fadeInUp" data-wow-delay=".6s" data-wow-offset="10">
-						<div class="service-box">
-							<div class="content">
-								<div class="icon-wrapper">
-								<i class="fa fa-mobile-phone"></i>
-								</div>
-								<h2>Technology</h2>
-								<p>Our operation currently includes a research and development farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY. </p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section> -->
-		<!-- End Services Section-->
 		
-		<!-- Start Our Produce Section -->
-		<section id="our-produce">
+		<!-- Start Produce Section -->
+		<section id="produce">
 			<div class="container">
-				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Produce</h1>
+				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Produce<hr></h1>
 				<div class="row">
 					<div class="container center wow fadeInUp">
 
@@ -217,23 +160,22 @@
 				</div>
 			</div>
 		</section>
-		<!-- End Our Produce Section -->
+		<!-- End Produce Section -->
 
 		<!-- Start Divider Section -->
 		<section id="divider3" class="divider"></section>
 		<!-- End Divider Section-->
 
-		<!-- Start About Us Section -->
-		<section id="about" class="about-section">
-			<!-- <div class="shader">  -->
+		<!-- Start Team Section -->
+		<section id="team" class="team-section">
 				<div class="container">
-				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> team</h1>
+				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Team</h1>
 					<div class="row">
 						<div id="slide" class="owl-carousel">
 							<div class="item">
 								<div class="col-sm-6 col-md-6 wow fadeInLeft" data-wow-offset="10">
 									<div class="side-left">
-											<img src="assets/img/about/miles.jpg" alt="">							
+											<img src="assets/img/team/miles.jpg" alt="">							
 										<div class="info">
 											<h4>Miles Crettien</h4>
 											<p>Co-Founder</p>
@@ -245,15 +187,13 @@
 										<p><br>
 										Miles is a graduate of Ithaca College where he received a BA in Environmental Science and Business Management. There, Miles focused his research on the mechanisms behind plant defenses and biofuel production and lead a project to build a biodiesel processing facility at an eco-reserve in the heart of the Ecuadorian Cloud Rainforest. Additionally, Miles worked five years as an organic vegetable grower on farms throughout Massachusetts. Using his experiences in agriculture and research, Miles has lead numerous initiatives to promote the practice of urban agriculture in NYC, including co-founding VertiCulture. Miles is currently an MBA candidate at Bard College’s MBA in Sustainability program.</br>
 										</p>
-										<!-- <a href="#" class="btn btn-border"><i class="fa fa-shopping-cart"></i> Hire Me</a>
-										<a href="#" class="btn btn-border"><i class="fa fa-download"></i> Download Resume</a> -->
 									</div>
 								</div>
 							</div>
 							<div class="item">
 								<div class="col-sm-6 col-md-6">
 									<div class="side-left">									
-											<img src="assets/img/about/02.jpg" alt="">							
+											<img src="assets/img/team/04.jpg" alt="">							
 										<div class="info">
 											<h4>Peter Spartos</h4>
 											<p>Co-Founder</p>
@@ -265,15 +205,13 @@
 										<p><br>
 											Peter graduated from the University of Vermont in 2007 with a BS in Environmental Science and concentration in Ecological Design. During his tenure, he studied and interned under Professor John Todd, PhD, and researched and experimented with ecological machines. In the winter of 2008, Peter moved to NYC and began an internship with New York Sun Works on their 2000 square foot self-sufficient, off grid, hydroponic farm, the Science Barge. He then went on to join the Gaia Institute to head GIS initiatives for several green roof and street level rainwater capture projects in Queens and Brooklyn. After two years with the Gaia Institute, Peter was hired as a design and installation technician and is currently working for New York Aquarium Service. He has installed over 75 saltwater reef aquariums in the New York Metropolitan area. </br>
 										</p>
-										<!-- <a href="#" class="btn  btn-border angle"><i class="fa fa-shopping-cart"></i> Hire Me</a>
-										<a href="#" class="btn btn-border angle"><i class="fa fa-download"></i> Download Resume</a> -->
 									</div>
 								</div>
 							</div>
 							<div class="item">
 								<div class="col-sm-6 col-md-6">
 									<div class="side-left">									
-											<img src="assets/img/about/03.jpg" alt="">							
+											<img src="assets/img/team/04.jpg" alt="">							
 										<div class="info">
 											<h4>Ryan Morningstar</h4>
 											<p>Co-Founder</p>
@@ -285,8 +223,6 @@
 										<p><br>
 											Ryan graduated from The New School with a degree in Economics, focusing on Health Economics and Business. Ryan has four years working experience at an organic vegetable farm in Massachusetts and previously worked with GrowNYC as their Youth Market Manager. Ryan is now the Procurement Manager at Good Eggs NYC, a direct retail local food distributor with offices nationally. Ryan’s expertise is in food distribution networks, procurement and sale of high quality local food, along with experience with financial analysis and marketing. </br>
 										</p>
-										<!-- <a href="#" class="btn  btn-border angle"><i class="fa fa-shopping-cart"></i> Hire Me</a>
-										<a href="#" class="btn btn-border angle"><i class="fa fa-download"></i> Download Resume</a> -->
 									</div>
 								</div>
 							</div>
@@ -294,7 +230,7 @@
 							<div class="item">
 								<div class="col-sm-6 col-md-6">
 									<div class="side-left">									
-											<img src="assets/img/about/04.jpg" alt="">							
+											<img src="assets/img/team/04.jpg" alt="">							
 										<div class="info">
 											<h4>Jacob Hill</h4>
 											<p>Co-Founder</p>
@@ -306,8 +242,6 @@
 										<p><br>
 											Jacob studied at Utah State University in the biology department. Jacob now works as an Aquarium technician, monitoring reef aquariums. He has experience with husbandry of saltwater fish, invertebrates, and corals. He also designs systems to ensure quality ecosystems within a closed environment. Jacob is passionate about sustainable agriculture and developing new technologies to improve efficiencies of the controlled environment agriculture sector.</br>
 										</p>
-										<!-- <a href="#" class="btn  btn-border angle"><i class="fa fa-shopping-cart"></i> Hire Me</a>
-										<a href="#" class="btn btn-border angle"><i class="fa fa-download"></i> Download Resume</a> -->
 									</div>
 								</div>
 							</div>
@@ -315,7 +249,7 @@
 							<div class="item">
 								<div class="col-sm-6 col-md-6">
 									<div class="side-left">									
-											<img src="assets/img/about/04.jpg" alt="">							
+											<img src="assets/img/team/04.jpg" alt="">							
 										<div class="info">
 											<h4>Fred Constantino</h4>
 											<p>Engineer</p>
@@ -327,8 +261,6 @@
 										<p><br>
 											Jacob studied at Utah State University in the biology department. Jacob now works as an Aquarium technician, monitoring reef aquariums. He has experience with husbandry of saltwater fish, invertebrates, and corals. He also designs systems to ensure quality ecosystems within a closed environment. Jacob is passionate about sustainable agriculture and developing new technologies to improve efficiencies of the controlled environment agriculture sector.</br>
 										</p>
-										<!-- <a href="#" class="btn  btn-border angle"><i class="fa fa-shopping-cart"></i> Hire Me</a>
-										<a href="#" class="btn btn-border angle"><i class="fa fa-download"></i> Download Resume</a> -->
 									</div>
 								</div>
 							</div>
@@ -336,7 +268,7 @@
 							<div class="item">
 								<div class="col-sm-6 col-md-6">
 									<div class="side-left">									
-											<img height="270px" width="270px" src="assets/img/about/hanni.jpg" alt="">							
+											<img height="270px" width="270px" src="assets/img/team/hanni.jpg" alt="">
 										<div class="info">
 											<h4>Hanni Abukhater</h4>
 											<p>Engineer</p>
@@ -348,17 +280,14 @@
 										<p><br>
 											Jacob studied at Utah State University in the biology department. Jacob now works as an Aquarium technician, monitoring reef aquariums. He has experience with husbandry of saltwater fish, invertebrates, and corals. He also designs systems to ensure quality ecosystems within a closed environment. Jacob is passionate about sustainable agriculture and developing new technologies to improve efficiencies of the controlled environment agriculture sector.</br>
 										</p>
-										<!-- <a href="#" class="btn  btn-border angle"><i class="fa fa-shopping-cart"></i> Hire Me</a>
-										<a href="#" class="btn btn-border angle"><i class="fa fa-download"></i> Download Resume</a> -->
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			<!-- </div> -->
 		</section>
-		<!-- End About Us Section -->		
+		<!-- End Team Section -->		
 				
 		<!-- Start Contact Section -->
 		<section id="contact">
