--- a/projects/vcf/index.html
+++ b/projects/vcf/index.html
@@ -24,10 +24,6 @@
 	<meta property="og:image:type"       content="image/jpg">
 	<meta property="og:image:width"      content="2310">
 	<meta property="og:image:height"     content="1536">
-    <!-- <meta property="fb:admins" content="100000472617627">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@">
-    <meta name="twitter:creator" content="@"> -->
     <meta name="twitter:url" content="https://verticulturefarms.com/">
     <meta name="twitter:title" content="Verticulture Farms | An aquaponics farm in Brooklyn">
     <meta name="twitter:description" content="We grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
@@ -38,11 +34,10 @@
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
 	<!-- icon fonts font Awesome -->
 	<link rel="stylesheet" media="screen" href="assets/fonts/font-awesome/font-awesome.min.css">
-	<!-- Custom Styles -->
-	<link href="assets/css/style.css" rel="stylesheet"> 
-	<link href="assets/css/presets/custom-color.css" rel="stylesheet"> 
 	<!-- Responsive Styles -->
 	<link href="assets/css/responsive.css" rel="stylesheet">
+	<!-- Custom Styles -->
+	<link href="assets/css/style.css" rel="stylesheet"> 
 	<!-- Normalize Styles -->
 	<link href="assets/css/normalize.css" rel="stylesheet">
 	<!-- Extras -->
@@ -132,7 +127,7 @@
 				<div class="row">
 					<div class="container center wow fadeInUp">
 
-						We chose to raise tilapia because of its resilience in varying environmental conditions, rising market demand globally, and the sustainability of raising tilapia on a commercial scale as a replacement for other commercial white fish species such as cod, which are in steep decline in the wild. Tilapia are extremely disease resistant, responsive to high density farming and offer a high feed to flesh ratio.
+						Tilapia is our choice fish because of its resilience in varying environmental conditions, rising market demand globally, and the sustainability of raising tilapia on a commercial scale as a replacement for other commercial white fish species such as cod, which are in steep decline in the wild. Tilapia are extremely disease resistant, responsive to high density farming and offer a high feed to flesh ratio.
 						<br><br>
 						Currently, we feed our fish high quality commercial feed made of chicken and fish meal, but we hope to transition to a more sustainable plant and insect based diet that will be grown on-site. Growing our own feed further closes the loop, increasing the sustainability of our farms by reducing dependency on high cost (ecological and economic) feed sources, while feeding our fish a healthier diet.
 					</div>
@@ -319,11 +314,11 @@
 										<textarea name="message" rows="7" class="form-control" placeholder="Message"></textarea>
 								</div>
 								<div class="col-sm-6 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
-									<button type="submit" id="submit" class="btn btn-common" value="Send">Send</button>
+									<button type="submit" id="submit" class="btn" value="Send">Send</button>
 								</div>
 								<input type="hidden" name="_next" value="https://formspree.io/thanks" />
 							    <input type="hidden" name="_subject" value="Contact Form Submission" />
-							    <input type="hidden" name="_cc" value="hanni.verticulturefarms@gmail.com, verticulturefarms@gmail.com" />
+							    <input type="hidden" name="_cc" value="hanni.verticulturefarms@gmail.com, hanniabu@gmail.com" />
 							    <input type="text" name="_gotcha" style="display:none" />
 							</form>
 						</div>
