create multiple CC for contact form

--- a/projects/vcf/index.html
+++ b/projects/vcf/index.html
@@ -291,7 +291,6 @@
 				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span id='contant-title'>Contact</span> Us</h1>
 					<div class="row">
 						<div class="contact-form">
-							<!-- <form role="form" method="post"> -->
 							<form action="https://formspree.io/verticulturefarms@gmail.com" method="post">
 								<div class="col-sm-6 col-md-6 wow fadeInLeft" data-wow-delay="0.2s">
 										<div class="controls">
@@ -318,7 +317,8 @@
 								</div>
 								<input type="hidden" name="_next" value="https://formspree.io/thanks" />
 							    <input type="hidden" name="_subject" value="Contact Form Submission" />
-							    <input type="hidden" name="_cc" value="hanni.verticulturefarms@gmail.com, hanniabu@gmail.com" />
+							    <input type="hidden" name="_cc" value="hanni.verticulturefarms@gmail.com" />
+							    <input type="hidden" name="_cc" value="hanniabu@gmail.com" />
 							    <input type="text" name="_gotcha" style="display:none" />
 							</form>
 						</div>
@@ -332,9 +332,6 @@
 		<section id="connected">
 			<div class="container">
 				<div class="row">
-					<!-- <h1 class="section-title wow fadeInUp" data-wow-delay=".2s"><span>Stay</span> Connected</h1>		
-					<h3 class="discription wow fadeIn" data-wow-delay=".2s">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h3>
-					<hr> -->
 					<div class="connected-wrapper center col-md-offset-4">
 						<div class="col-sm-6 col-md-2 wow fadeInUp" data-wow-delay="0.2s">
 							<div class="contact-item">
