vcf full push update css load after fold, deleted commented out lines, deleted unused pictures

--- a/projects/vcf/index.html
+++ b/projects/vcf/index.html
@@ -32,20 +32,11 @@
 
 	<!-- Bootstrap  -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
-	<!-- icon fonts font Awesome -->
-	<link rel="stylesheet" media="screen" href="assets/fonts/font-awesome/font-awesome.min.css">
 	<!-- Custom Styles -->
 	<link href="assets/css/style.css" rel="stylesheet"> 
-	<!-- Responsive Styles -->
-	<link href="assets/css/responsive.css" rel="stylesheet">
-	<!-- Normalize Styles -->
-	<link href="assets/css/normalize.css" rel="stylesheet">
 	<!-- Extras -->
 	<link rel="stylesheet" type="text/css" href="assets/extras/animate.css">
-	<link rel="stylesheet" type="text/css" href="assets/extras/lightbox.css">
-	<link rel="stylesheet" type="text/css" href="assets/extras/owl/owl.carousel.css">
-	<link rel="stylesheet" type="text/css" href="assets/extras/owl/owl.theme.css">
-	<link rel="stylesheet" type="text/css" href="assets/extras/owl/owl.transitions.css">
+
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -77,6 +68,7 @@
 						</ul>
 					</div>
 					<!-- End Navigation Menu -->
+
 				</div>
 			</nav>
 		</header>
@@ -87,11 +79,11 @@
 					<div class="row">
 						<div class="main-text overlay">
 							<h1 class="wow fadeInUp"><span>Verticulture</span> Farms</h1>
-							<h2 class="wow fadeInUp" data-wow-delay=".7s">
+							<h2 class="wow fadeInUp" data-wow-delay=".5s">
 								<!-- Providing Fresh and Nutritious Foods to Diverse Populations -->
 								Providing Fresh and Nutritious Custom Blended Herbs
 							</h2>
-							<div class="wow fadeInUp" data-wow-delay="1.5s"><a onclick="smoothScr.anim('story')" class="btn btn-border btn-lg"><i class="fa fa-spinner fa-spin"></i> Explore</a></div>
+							<div class="wow fadeInUp" data-wow-delay="1.2s"><a onclick="smoothScr.anim('story')" class="btn btn-border btn-lg"><i class="fa fa-spinner fa-spin"></i> Explore</a></div>
 						</div>
 					</div>
 		</section>
@@ -164,7 +156,7 @@
 		<!-- Start Team Section -->
 		<section id="team" class="team-section">
 				<div class="container">
-				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Team</h1>
+				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Team<hr></h1>
 					<div class="row">
 						<div id="slide" class="owl-carousel">
 							<div class="item">
@@ -180,7 +172,7 @@
 								<div class="col-sm-6 col-md-6 wow fadeInRight" data-wow-offset="10">
 									<div class="side-right">
 										<p><br>
-										Miles is a graduate of Ithaca College where he received a BA in Environmental Science and Business Management. There, Miles focused his research on the mechanisms behind plant defenses and biofuel production and lead a project to build a biodiesel processing facility at an eco-reserve in the heart of the Ecuadorian Cloud Rainforest. Additionally, Miles worked five years as an organic vegetable grower on farms throughout Massachusetts. Using his experiences in agriculture and research, Miles has lead numerous initiatives to promote the practice of urban agriculture in NYC, including co-founding VertiCulture. Miles is currently an MBA candidate at Bard College’s MBA in Sustainability program.</br>
+										Miles is a graduate of Ithaca College where he received a BA in Environmental Science and Business Management. There, Miles focused his research on the mechanisms behind plant defenses and biofuel production and lead a project to build a biodiesel processing facility at an eco-reserve in the heart of the Ecuadorian Cloud Rainforest. Additionally, Miles worked five years as an organic vegetable grower on farms throughout Massachusetts. Using his experiences in agriculture and research, Miles has lead numerous initiatives to promote the practice of urban agriculture in NYC, including co-founding VertiCulture Farms. Miles is currently an MBA candidate at Bard College’s MBA in Sustainability program.</br>
 										</p>
 									</div>
 								</div>
@@ -273,7 +265,7 @@
 								<div class="col-sm-6 col-md-6">
 									<div class="side-right">
 										<p><br>
-											Jacob studied at Utah State University in the biology department. Jacob now works as an Aquarium technician, monitoring reef aquariums. He has experience with husbandry of saltwater fish, invertebrates, and corals. He also designs systems to ensure quality ecosystems within a closed environment. Jacob is passionate about sustainable agriculture and developing new technologies to improve efficiencies of the controlled environment agriculture sector.</br>
+											Hanni graduated from New Jersey Institute of Technology with a BS in Mechanical Engineering. Throughout his studies, he gained interest in automation, system efficiencies, and programming. He then went on to work in research and development of hydroponic systems. After 2 years of experience, he moved on to join Verticulture Farms where he is working to marriage his talents to improve design and practice in aquaponics.</br>
 										</p>
 									</div>
 								</div>
@@ -288,7 +280,7 @@
 		<section id="contact">
 			<div class="overlay">
 				<div class="container">
-				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span id='contant-title'>Contact</span> Us</h1>
+				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span id='contant-title'>Contact</span> Us<hr></h1>
 					<div class="row">
 						<div class="contact-form">
 							<form action="https://formspree.io/verticulturefarms@gmail.com" method="post">
@@ -345,7 +337,7 @@
 						</div>
 						<div class="col-sm-6 col-md-2 wow fadeInUp" data-wow-delay="0.2s">
 							<div class="contact-item">
-								<a href="https://www.facebook.com/VertiCulture"><i class="fa fa-instagram"></i></a>
+								<a href="#"><i class="fa fa-instagram"></i></a>
 								<h5>Instagram</h5>
 							</div>
 						</div>
@@ -368,7 +360,18 @@
 		</div>
 		<!-- Scroll End -->
 
-		
+
+		<!-- icon fonts font Awesome -->
+		<link rel="stylesheet" media="screen" href="assets/fonts/font-awesome/font-awesome.min.css">
+		<!-- Normalize Styles -->
+		<!-- <link href="assets/css/normalize.css" rel="stylesheet"> -->
+		<!-- Responsive Styles -->
+		<link href="assets/css/responsive.css" rel="stylesheet">
+		<!-- Extras -->
+		<link rel="stylesheet" type="text/css" href="assets/extras/lightbox.css">
+		<link rel="stylesheet" type="text/css" href="assets/extras/owl/owl.carousel.css">
+		<!-- <link rel="stylesheet" type="text/css" href="assets/extras/owl/owl.theme.css"> -->
+		<link rel="stylesheet" type="text/css" href="assets/extras/owl/owl.transitions.css">
 		<!-- Include jquery.min.js plugin -->
 		<script src="assets/js/jquery-min.js"></script>
 		<!-- Include Bootstrap plugin -->
