full commit, site ready to go live, baby!

--- a/projects/vcf/index.html
+++ b/projects/vcf/index.html
@@ -60,7 +60,7 @@
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right" id="main_navigation_menu">
 							<li class="active"><a href="#header">Home</a></li>
-							<li><a href="#story">Our Story</a></li>
+							<li><a href="#story">About</a></li>
 							<li><a href="#fish">Tilapia</a></li>
 							<li><a href="#produce">Produce</a></li>
 							<li><a href="#team">The Team</a></li>		
@@ -94,13 +94,15 @@
 			<div class="container">
 				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Story<hr></h1>
 				<div class="row">
-					<div class="container center wow fadeInUp">
-
+					<div class="container wow fadeInUp">
+						<h3>What We Do</h3>
 						Verticulture Farms operates aquaponic farms and develops innovative technologies to improve efficiencies. We utilize a vertical, multi-trophic ecological design coupled with our technology to increase the health of our systems and economic viability of our farms.
 						<br><br>
+						<h3>Social Mission</h3>
 						Building farms is only one part of our mission as a company. As we expand, our goal is to support and build our surrounding communities. We aim to offer healthy, affordable food and focus on outreach and education to train the next generation of urban agriculture professionals.  
 						<br><br>
-						Our current operation is a research and development farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, New York. 
+						<h3>Where We Stand</h3>
+						Our current operation is a research and development farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, New York. We are working hard improve the viabilitiy of aquaponic farms in our to expand our operations.
 
 					</div>
 				</div>
@@ -117,10 +119,11 @@
 			<div class="container">
 				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Tilapia<hr></h1>
 				<div class="row">
-					<div class="container center wow fadeInUp">
-
+					<div class="container  wow fadeInUp">
+						<h3>Why Tilapia</h3>
 						Tilapia is our choice fish because of its resilience in varying environmental conditions, rising market demand globally, and the sustainability of raising tilapia on a commercial scale as a replacement for other commercial white fish species such as cod, which are in steep decline in the wild. Tilapia are extremely disease resistant, responsive to high density farming and offer a high feed to flesh ratio.
-						<br><br>
+						<br>
+						<h3>Our Fish Feed</h3>
 						Currently, we feed our fish high quality commercial feed made of chicken and fish meal, but we hope to transition to a more sustainable plant and insect based diet that will be grown on-site. Growing our own feed further closes the loop, increasing the sustainability of our farms by reducing dependency on high cost (ecological and economic) feed sources, while feeding our fish a healthier diet.
 					</div>
 				</div>
@@ -137,10 +140,11 @@
 			<div class="container">
 				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Produce<hr></h1>
 				<div class="row">
-					<div class="container center wow fadeInUp">
-
+					<div class="container wow fadeInUp">
+						<h3>Always Fresh</h3>
 						Verticulture Farms values diversity in the design of farms. Mixes of vegetables are grown, which work together to improve the overall health of the system by filtering water and providing an environment for micro-organisms to colonize and thrive. We offer hyper-local produce cut fresh the day it is consumed, increasesing the shelf life of our products as well as the nutrient density, feeding healthier communities in locations where we build our farms. 
-						<br><br>
+						<br>
+						<h3>Custom Blends</h3>
 						We now offer custom herb and vegetable blends to chefs and food artisans in the NYC market on a revolving basis. Custom blends can be grown within one month of order due to our agile growing methods.
 
 					</div>
