replaced links with CDN's

--- a/projects/vcf/index.html
+++ b/projects/vcf/index.html
@@ -31,11 +31,13 @@
 
 
 	<!-- Bootstrap  -->
-	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
+	<!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet"> -->
+	<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Custom Styles -->
 	<link href="assets/css/style.css" rel="stylesheet"> 
 	<!-- Extras -->
-	<link rel="stylesheet" type="text/css" href="assets/extras/animate.css">
+	<!-- <link rel="stylesheet" type="text/css" href="assets/extras/animate.css"> -->
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.6/animate.min.css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
@@ -53,7 +55,7 @@
 						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 							<i class="fa fa-bars fa-lg"></i>
 						</button>
-						<a href="index.html" class="navbar-brand"><img class="logo" src="assets/img/logo/logo32.png" alt=""><img class="banner" src="assets/img/banner/banner32.png" alt=""></a>
+						<a href="#" class="navbar-brand"><img class="logo" src="assets/img/logo/logo32.png" alt=""><img class="banner" src="assets/img/banner/banner32.png" alt=""></a>
 					</div>
 					
 					<!-- Start Navigation Menu -->
@@ -366,38 +368,64 @@
 
 
 		<!-- icon fonts font Awesome -->
-		<link rel="stylesheet" media="screen" href="assets/fonts/font-awesome/font-awesome.min.css">
+		<!-- <link rel="stylesheet" media="screen" href="assets/fonts/font-awesome/font-awesome.min.css"> -->
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+
 		<!-- Normalize Styles -->
 		<!-- <link href="assets/css/normalize.css" rel="stylesheet"> -->
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+
 		<!-- Responsive Styles -->
 		<link href="assets/css/responsive.css" rel="stylesheet">
+
 		<!-- Extras -->
-		<link rel="stylesheet" type="text/css" href="assets/extras/lightbox.css">
-		<link rel="stylesheet" type="text/css" href="assets/extras/owl/owl.carousel.css">
+		<!-- <link rel="stylesheet" type="text/css" href="assets/extras/lightbox.css"> -->
 		<!-- <link rel="stylesheet" type="text/css" href="assets/extras/owl/owl.theme.css"> -->
-		<link rel="stylesheet" type="text/css" href="assets/extras/owl/owl.transitions.css">
+		<!-- <link rel="stylesheet" type="text/css" href="assets/extras/owl/owl.transitions.css"> -->
+
+		<!-- <link rel="stylesheet" type="text/css" href="assets/extras/owl/owl.carousel.css"> -->
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.css">
+		
+
 		<!-- Include jquery.min.js plugin -->
-		<script src="assets/js/jquery-min.js"></script>
+		<!-- // <script src="assets/js/jquery-min.js"></script> -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
 		<!-- Include Bootstrap plugin -->
-		<script src="assets/js/bootstrap.min.js"></script>
+		<!-- // <script src="assets/js/bootstrap.min.js"></script> -->
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
 		<!-- One page Nav plugin -->		
-		<script src="assets/js/jquery.nav.js"></script>
+		<!-- // <script src="assets/js/jquery.nav.js"></script> -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-one-page-nav/3.0.0/jquery.nav.min.js"></script>
+
 		<!-- Include Bootstrap plugin -->
-		<script src="assets/js/owl.carousel.js"></script>
+		<!-- // <script src="assets/js/owl.carousel.js"></script> -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
+
 		<!-- Include wow plugin -->
-		<script src="assets/js/wow.js"></script>
+		<!-- // <script src="assets/js/wow.js"></script> -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+
 		<!-- Include mixitup plugin -->
-		<script src="assets/js/jquery.mixitup.js"></script>
-		<!-- ScrollTop -->
-		<script src="assets/js/lightbox.min.js"></script>
+		<!-- // <script src="assets/js/jquery.mixitup.js"></script> -->
+		<!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/1.5.6/jquery.mixitup.min.js"></script> -->
+		
+
 		<!-- Lightbox -->
+		<!-- // <script src="assets/js/lightbox.min.js"></script> -->
+		<!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"></script> -->
+
+		<!-- ScrollTop -->
 		<script src="assets/js/scroll-top.js"></script>
+
 		<!-- Smooth Scroll -->
 		<script src="assets/js/smooth-scroll.js"></script>
-		<!-- preset js -->
-		<script src="assets/js/style.changer.js"></script>
+
 		<!-- Modernizr js -->
-		<script src="assets/js/modernizr-2.8.0.main.js"></script>
+		<!-- // <script src="assets/js/modernizr-2.8.0.main.js"></script> -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+
 		<!-- Main js -->
 		<script src="assets/js/main.js"></script>
 			
