--- a/projects/vcf/index.html
+++ b/projects/vcf/index.html
@@ -31,8 +31,8 @@
 
 
 	<!-- Bootstrap  -->
-	<!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet"> -->
-	<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
+	<!-- <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet"> -->
 	<!-- Custom Styles -->
 	<link href="assets/css/style.css" rel="stylesheet"> 
 	<!-- Extras -->
@@ -392,8 +392,8 @@
 		// <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 		<!-- Include Bootstrap plugin -->
-		// <script src="assets/js/bootstrap.min.js"></script>
-		<!-- // <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> -->
+		<!-- // <script src="assets/js/bootstrap.min.js"></script> -->
+		// <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 		<!-- One page Nav plugin -->		
 		<!-- // <script src="assets/js/jquery.nav.js"></script> -->
