--- a/projects/vcf/index.html
+++ b/projects/vcf/index.html
@@ -393,7 +393,7 @@
 
 		<!-- Include Bootstrap plugin -->
 		<!-- // <script src="assets/js/bootstrap.min.js"></script> -->
-		// <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+		// <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 		<!-- One page Nav plugin -->		
 		<!-- // <script src="assets/js/jquery.nav.js"></script> -->
