fixing unloaded navbar

--- a/projects/vcf/index.html
+++ b/projects/vcf/index.html
@@ -31,8 +31,8 @@
 
 
 	<!-- Bootstrap  -->
-	<!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet"> -->
-	<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
+	<!-- <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet"> -->
 	<!-- Custom Styles -->
 	<link href="assets/css/style.css" rel="stylesheet"> 
 	<!-- Extras -->
