--- a/projects/vcf/index.html
+++ b/projects/vcf/index.html
@@ -389,11 +389,11 @@
 
 		<!-- Include jquery.min.js plugin -->
 		// <script src="assets/js/jquery-min.js"></script>
-		// <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
 
 		<!-- Include Bootstrap plugin -->
-		<script src="assets/js/bootstrap.min.js"></script>
-		<!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script> -->
+		<!-- // <script src="assets/js/bootstrap.min.js"></script> -->
+		// <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
 		<!-- One page Nav plugin -->		
 		<!-- // <script src="assets/js/jquery.nav.js"></script> -->
