fixing unloaded navbar

--- a/projects/vcf/index.html
+++ b/projects/vcf/index.html
@@ -65,7 +65,7 @@
 							<li><a href="#story">About</a></li>
 							<li><a href="#fish">Tilapia</a></li>
 							<li><a href="#produce">Produce</a></li>
-							<li><a href="#team">The Team</a></li>		
+							<!-- <li><a href="#team">The Team</a></li>		 -->
 							<li><a href="#contact">Contact</a></li>
 						</ul>
 					</div>
@@ -160,7 +160,7 @@
 		<!-- End Divider Section-->
 
 		<!-- Start Team Section -->
-		<section id="team" class="team-section">
+		<!-- <section id="team" class="team-section">
 				<div class="container">
 				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Team<hr></h1>
 					<div class="row">
@@ -279,7 +279,7 @@
 						</div>
 					</div>
 				</div>
-		</section>
+		</section> -->
 		<!-- End Team Section -->		
 				
 		<!-- Start Contact Section -->
@@ -388,12 +388,12 @@
 		
 
 		<!-- Include jquery.min.js plugin -->
-		// <script src="assets/js/jquery-min.js"></script>
+		<script src="assets/js/jquery-min.js"></script>
 		<!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
 
 		<!-- Include Bootstrap plugin -->
 		<!-- // <script src="assets/js/bootstrap.min.js"></script> -->
-		// <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
 		<!-- One page Nav plugin -->		
 		<!-- // <script src="assets/js/jquery.nav.js"></script> -->
