added body height/width

--- a/projects/vcf/index.html
+++ b/projects/vcf/index.html
@@ -252,7 +252,7 @@
 								<div class="col-sm-6 col-md-6">
 									<div class="side-right">
 										<p><br>
-											Jacob studied at Utah State University in the biology department. Jacob now works as an Aquarium technician, monitoring reef aquariums. He has experience with husbandry of saltwater fish, invertebrates, and corals. He also designs systems to ensure quality ecosystems within a closed environment. Jacob is passionate about sustainable agriculture and developing new technologies to improve efficiencies of the controlled environment agriculture sector.</br>
+											Fred earned his BS in Mechanical Engineering from University at Buffalo. From there, he spent a year in Japan at Tohoku University redesigning a remote operated nurse-bot to be fully autonomous. Upon returning to the States, Fred began working for the American Society of Mechanical Engineers (ASME) managing the development and revision of engineering codes and standards. While working, he graduated from Columbia University with a MS in Mechanical Engineering and concentration in control systems. Upon graduation, Fred began volunteering with Engineers Without Borders (EWB) to hone his engineering problem solving skills. Fred continues to work for ASME as a Project Engineering Advisor and volunteers for EWB designing a water treatment and wastewater treatment system for a health clinic in Peru.</br>
 										</p>
 									</div>
 								</div>
