--- a/projects/workouts/index.html
+++ b/projects/workouts/index.html
@@ -10,7 +10,7 @@
 	    <!-- Custom styles for this template -->
 	    <link href="assets/css/main.css" rel="stylesheet">
 	    <!-- <link rel="stylesheet" href="assets/css/icomoon.css"> -->
-	    <link href="assets/css/animate-custom.css" rel="stylesheet">
+	    <!-- <link href="assets/css/animate-custom.css" rel="stylesheet"> -->
 	    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
 	    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -28,11 +28,12 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand inline" href="#"><img class="logo inline" src="assets/img/icon.png"> Workout Randomizer </a>
+		      <a class="navbar-brand inline" href="#" onclick="restart()"><img class="logo inline" src="assets/img/icon.png"> Workout Randomizer </a>
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          <ul class="nav navbar-nav navbar-right">
-				<li> <a href="#abs" class="smoothScroll"> Abs</a></li>
+				<li> <a href="#abs" class="smoothScroll" onclick="restart()"> Abs</a></li>
+				<!-- <li> <a href="" class="smoothScroll"> Legs</a></li> -->
 	        </div><!--/.nav-collapse -->
 	      </div>
 	    </div>
@@ -40,40 +41,129 @@
     <!-- ==== NAVBAR ==== -->
 
 
-		<!-- ==== CONTENT ==== -->
-		<div id="wrap" class="light-grey">
-			<div class="content container center clear-top">
-				<h1>Select Workout Day</h1>
-
-				<select class="form-control">
+	<!-- ==== CONTENT ==== -->
+	<div id="wrap">
+		<div class=" container center ">
+			<div id="select-workout">
+				<h1>Select Workout</h1>
+			</div>
+			<div id="dropdown">
+				<select id="abs" class="form-control">
 				    <option value="upper-abs">Upper Abs</option>
 				    <option value="lower-abs">Lower Abs</option>
-				    <option value="full-abs">Full Abs</option>
 				    <option value="obliques">Obliques</option>
-				    <option value="full-core">Full Core</option>
+				    <option value="core">Core</option>
+				    <option value="all-abs">All Abs</option>
 				</select>
-
-				<p><input type="submit" value="Give It To Me" class="flat-button"></p>
 			</div>
+			<p><input id='random-button' type="submit" value="Give It To Me" class="flat-button" onclick="clickRandomButton()"></p>
+		
+			
+			<div id="crunch" class="exercise">
+				<h1>Crunch</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/crunch.gif"></p>
+			</div>
+			<div id="situp" class="exercise">
+				<h1>Situps</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/situp.gif"></p>
+			</div>
+			<div id="toe-touch" class="exercise">
+				<h1>Toe Touches</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/toe-touch.gif"></p>
+			</div>
+			<div id="crunch-machine" class="exercise">
+				<h1>Crunch Machine</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/crunch-machine.gif"></p>
+			</div>
+			<div id="ball-crunch" class="exercise">
+				<h1>Ball Crunch</h1>
+			</div>
+			<div id="ball-leg-lift" class="exercise">
+				<h1>Ball Leg Lift</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/ball-leg-lift.gif"></p>
+			</div>
+			<div id="situp-ball-pass" class="exercise">
+				<h1>Situp Ball Pass</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/situp-ball-pass.jpg"></p>
+			</div>
+			<div id="situp-knee-hug" class="exercise">
+				<h1>Situp Knee Hug</h1>
+			</div>
+			<div id="countdown-kick" class="exercise">
+				<h1>Countdown Kick</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/countdown-kick.gif"></p>
+			</div>
+			<div id="side-plank" class="exercise">
+				<h1>Side Planks</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/side-plank.gif"></p>
+			</div>
+			<div id="oblique-weighted-lean" class="exercise">
+				<h1>Weighted Oblique Lean</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/oblique-weighted-lean.gif"></p>
+			</div>
+			<div id="oblique-preacher-crunch" class="exercise">
+				<h1>Oblique Preacher Crunch</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/oblique-preacher-crunch.gif"></p>
+			</div>
+			<div id="oblique-toe-touch" class="exercise">
+				<h1>Side Toe Touches</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/oblique-toe-touch.gif"></p>
+			</div>
+			<div id="oblique-ball-crunch" class="exercise">
+				<h1>Side Ball Crunch</h1>
+
+			</div>
+			<div id="oblique-machine" class="exercise">
+				<h1>Oblique Machine</h1>
+
+			</div>
+			<div id="oblique-ball-pass" class="exercise">
+				<h1>Turning Ball Pass</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/oblique-ball-pass.gif"></p>
+			</div>
+			<div id="plank" class="exercise">
+				<h1>Plank</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/plank.gif"></p>
+			</div>
+			<div id="flutter-kick" class="exercise">
+				<h1>Flutter Kicks</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/flutter-kick.gif"></p>
+			</div>
+			<div id="decline-reverse-crunch" class="exercise">
+				<h1>Decline Reverse Crunch</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/decline-reverse-crunch.gif"></p>
+			</div>
+			<div id="decline-crunch" class="exercise">
+				<h1>Decline Crunch</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/decline-crunch.gif"></p>
+			</div>
+			<div id="pushup-knee-crunch" class="exercise">
+				<h1>Pushup Knee Crunch</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/pushup-knee-crunch.jpg"></p>
+			</div>
+			<div id="crunch-weight-lift" class="exercise">
+				<h1>Crunch Weight Lift</h1>
+				<p><img class="img-responsive gifs" src="assets/img/gifs/crunch-weight-lift.gif"></p>
+			</div>
+
 		</div>
-		<!-- ==== CONTENT ==== -->
 
-
-
-		<!-- ==== FOOTER ====  -->
-		<div id="footer">
-			<!-- <div class="container"> -->
-				<h4>Created by <a href="https://hanniabu.com">Hanni Abu</a> - Copyright 2015</h4>
-			<!-- </div> -->
+		<div class="container next-random-button">
+			<button id='next-random-button' class="flat-button" onclick="clickNextRandom()">Next Workout</button>
 		</div>
-		<!-- ==== FOOTER ====  -->
+	</div>
+	<!-- ==== CONTENT ==== -->
 
+
+
+		
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+	<script src="assets/js/main.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/retina.js/1.3.0/retina.min.js"></script>
+	<!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/retina.js/1.3.0/retina.min.js"></script> -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/1.5.5/jquery.smooth-scroll.min.js"></script>
 	<!--<script type="text/javascript" src="assets/js/jquery-func.js"></script>-->
