adjusted to fit screen and images more responsive

--- a/projects/vcf/index.html
+++ b/projects/vcf/index.html
@@ -70,7 +70,6 @@
 						</ul>
 					</div>
 					<!-- End Navigation Menu -->
-
 				</div>
 			</nav>
 		</header>
@@ -78,16 +77,16 @@
 		
 		<!-- Start Intro Section -->
 		<section id="intro" class="section-intro">
-					<div class="row">
+					<!-- <div class="container" style="padding: 0; margin: 0"> -->
 						<div class="main-text overlay">
 							<h1 class="wow fadeInUp"><span>Verticulture</span> Farms</h1>
 							<h2 class="wow fadeInUp" data-wow-delay=".5s">
-								<!-- Providing Fresh and Nutritious Foods to Diverse Populations -->
-								Providing Fresh and Nutritious Custom Blended Herbs
+								Providing Fresh and Nutritious Foods to Diverse Populations
+								<!-- Providing Fresh and Nutritious Custom Blended Herbs -->
 							</h2>
 							<div class="wow fadeInUp" data-wow-delay="1.2s"><a onclick="smoothScr.anim('story')" class="btn btn-border btn-lg"><i class="fa fa-spinner fa-spin"></i> Explore</a></div>
 						</div>
-					</div>
+					<!-- </div> -->
 		</section>
 		<!-- End Intro Section -->
 
@@ -136,7 +135,7 @@
 		<!-- Start Divider Section -->
 		<section id="divider2" class="divider"></section>
 		<!-- End Divider Section-->
-		
+
 		<!-- Start Produce Section -->
 		<section id="produce">
 			<div class="container">
@@ -156,7 +155,7 @@
 		<!-- End Produce Section -->
 
 		<!-- Start Divider Section -->
-		<section id="divider3" class="divider"></section>
+		<footer id="divider3" class="divider"></footer>
 		<!-- End Divider Section-->
 
 		<!-- Start Team Section -->
