--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-		<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
-		<!-- <link href='fonts.googleapis.com/css?family=Josefin+Sans:600,700|Damion' rel='stylesheet' type='text/css'> -->
-		<!-- <meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no"> -->
 		<title>Hanni Abu // Developer</title>
 		<link href="tools/style.css" rel="stylesheet" type="text/css" media="screen" />
-		<!-- <script type="text/javascript" src="tools/jquery.min.js"></script> -->
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 		<link rel="icon" type="image/gif" href="images/ha-logo.gif" />
 		
@@ -21,10 +17,6 @@
         <meta property="og:type" content="website">
         <meta property="og:description" content="Hanni Abukhater is a web developer and mechanical engineer living in Clifton, New Jersey.">
         <meta property="og:image" content="images/ha-logo.png">
-        <!-- <meta property="fb:admins" content="100000472617627">
-        <meta name="twitter:card" content="summary">
-        <meta name="twitter:site" content="@">
-        <meta name="twitter:creator" content="@"> -->
         <meta name="twitter:url" content="index.html">
         <meta name="twitter:title" content="Hanni Abu // Developer">
         <meta name="twitter:description" content="Hanni Abukhater is a web developer and mechanical engineer living in Clifton, New Jersey.">
@@ -42,13 +34,7 @@
 	</div>
 	<div id="footer">
 		<div>
-		<a class="button"  href="Hanni Abu Resume.pdf" style="text-decoration: none" download>Download Resume</a>
-		<h2><br><br>hanniabu@gmail.com<br><br></h2>
-		<!-- <ul class="social">
-			<li class="facebook"><a href="#"></li>
-			<li class="twitter"><a href="#"></li>
-			<li class="youtube"><a href="#"></li>
-		</ul> -->
+			<h2>hanniabu@gmail.com<br><br></h2>
 		</div>
 	</div>
 </div>
