testing iphone bg image size

--- a/projects/vertfarms/index.html
+++ b/projects/vertfarms/index.html
@@ -45,7 +45,7 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
 
-  <!--[if IE 11]> <html class="ie"> <![endif]-->
+
 
 </head>
 	<body>
@@ -369,14 +369,13 @@
 		<!-- Scroll End -->
 
 
-		// <script type="text/javascript">
+		<script type="text/javascript">
 		// 	if (navigator.userAgent.match("MSIE") <= 1){
 		// 	  document.getElementById('divider1').style.backgroundAttachment = "scroll";
 		// 	  document.getElementById('divider2').style.backgroundAttachment = "scroll";
 		// 	  document.getElementById('divider3').style.backgroundAttachment = "scroll";
 		// 	}
-		// </script>
-
+		</script>
 
 
 
