--- a/projects/fa/index.html
+++ b/projects/fa/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	    <meta charset="utf-8">
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <link rel="shortcut icon" href="assets/img/logo16.png">
-	    <title> Furry Adventures</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1. maximum-scale=1">
+		<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
+		<meta charset="UTF-8">
+		<link rel="shortcut icon" href="assets/img/logo16.png">
+		<title>Furry Adventures | A dog adventure service in northern NJ</title>
+		<meta name="description" content="We offer various dog services, including walking, park visits, camping, house sitting. Every dog deserves and adventure!">
+		<meta name="keywords" content="dog, service, walk, activity, adventure, house sitting, nj, camping, north">
+		<link rel="canonical" href="https://furryadventure.com/" />
+		<meta name="robots" content="index,follow,archive">
+	    <meta name="author" content="Furry Adventures">
+	    <meta property="og:locale" content="en_us">
+	    <meta property="og:url" content="https://furryadventure.com/">
+	    <meta property="og:title" content="Furry Adventures | A dog adventure service in northern NJ">
+	    <meta property="og:site_name" content="Furry Adventures | A dog adventure service in northern NJ">
+	    <meta property="og:description" content="We offer various dog services, including walking, park visits, camping, house sitting. Every dog deserves and adventure!">
+	    <meta property="og:image:secure_url" content="https://furryadventure.com/assets/img/camping256.png">
+	    <meta property="og:type" content="website">
+	    <meta name="twitter:url" content="https://furryadventure.com/">
+	    <meta name="twitter:title" content="Furry Adventures | A dog adventure service in northern NJ">
+	    <meta name="twitter:description" content="We offer various dog services, including walking, park visits, camping, house sitting. Every dog deserves and adventure!">
+	    <meta name="twitter:image" content="assets/img/camping256.png">
+
+
 	    <!-- Bootstrap core CSS -->
 	    <link href="assets/css/bootstrap.css" rel="stylesheet">
 	    <!-- Custom styles for this template -->
@@ -93,7 +112,8 @@
 			</div>	
 			<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0 callout">
 				<div class="pointer" data-toggle="modal" href="#pace-modal">	
-					<span ><img class="img dog img-circle" src="assets/img/icons/runner.png" ></span>
+					<!-- <span ><img class="img dog img-circle" src="assets/img/icons/runner.png" ></span> -->
+					<span class="center" ><div class="img dog img-circle center" style="width:75px; display:inline-block; height:75px"> <img style="padding-right:5px;" src="assets/img/icons/runner.png"></div></span>
 					<h2>We Can Keep Up</h2>
 				</div>
 				<p>Have your dog walked by someone with the same athletic ability and energy as your dog. We'll let your dog set the pace pace! </p>
@@ -119,10 +139,10 @@
 
 			<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0 callout">
 				<div class="pointer" data-toggle="modal" href="#extras-modal">
-					<span class="center" ><div class="img dog img-circle center" style="width:75px; display:inline-block; padding-bottom:6px;"> <img src="assets/img/icons/star1xs.png"></div></span>
+					<span class="center" ><div class="img dog img-circle center" style="width:75px; display:inline-block; height:75px"> <img style="width:60px; height:60px; " src="assets/img/icons/star1xs.png"></div></span>
 					<h2>Complimentary Extras</h2>
 				</div>
-				<p>Never worry again. We'll send cute pictures and videos of your little one throughout the activity! </p>
+				<p>Receive picture and video updates of your dog throughout the activity, natural dog treats, mail retrieval, and more!</p>
 				<!-- <h2>Media Updates</h2>
 				<p>Never worry again. We'll send cute pictures and videos of your little one throughout the activity! </p> -->
 			</div>	
@@ -268,9 +288,6 @@
 								      <img class="img-responsive gallery" src="assets/img/sites/brookdale2.jpg" alt="...">
 								    </div>
 								    <div class="item">
-								      <img class="img-responsive gallery" src="assets/img/sites/brookdale5.jpg" alt="...">
-								    </div>
-								    <div class="item">
 								      <img class="img-responsive gallery" src="assets/img/sites/brookdale4.jpg" alt="...">
 								    </div>
 								    <div class="item">
@@ -401,7 +418,7 @@
 									  </a>
 									</div>
 						          </p>
-						          <p>This dog park provides a great social environment with breeds of all sizes for your critter to make friends with! It hosts a large enclosed area that allows your dog to roam free in the grass or sand and explore the obstacle courses provided.</p>
+						          <p>Eagle Rock Reservation is a great environment with traditional paved trails throughout the park that wrap around and lead up to the 9/11 memorial at a hgih point overlooking the NYC skyline. There are also many dirt trails in between offering countless route possibilities. </p>
 						          <p><b><a href="http://www.essexcountyparks.org/parks/eagle-rock-reservation" target="_blank">Visit Site</a></b></p>
 						          <span class="icon icon-location"></span>&nbsp&nbsp<strong><a href="https://goo.gl/maps/EiHIC" target="_blank">Prospect Ave & Eagle Rock Ave, West Orange, NJ 07052</a></strong><br/>
 								  <span class="icon icon-phone"></span>&nbsp&nbsp(973) 268-3500</a> <br/>
@@ -459,7 +476,7 @@
 								  </a>
 								</div>
 					          </p>
-					          <p>This dog park provides a great social environment with breeds of all sizes for your critter to make friends with! It hosts a large enclosed area that allows your dog to roam free in the grass or sand and explore the obstacle courses provided.</p>
+					          <p>This hidden oasis is only 157 acres, but hosts towering trees that completely submerge you in nature. Chipmunks and other critters are a common sight here and will be sure to get your little one even more excited.</p>
 					          <p><b><a href="http://www.essexcountyparks.org/parks/mills-reservation" target="_blank">Visit Site</a></b></p>
 					          <span class="icon icon-location"></span>&nbsp&nbsp<strong><a href="https://goo.gl/maps/FzZQy" target="_blank">Highland Ave, Cedar Grove, NJ 07009</a></strong><br/>
 							  <span class="icon icon-phone"></span>&nbsp&nbsp(973) 268-3500</a> <br/>
@@ -515,7 +532,7 @@
 								  </a>
 								</div>
 					          </p>
-					          <p>This dog park provides a great social environment with breeds of all sizes for your critter to make friends with! It hosts a large enclosed area that allows your dog to roam free in the grass or sand and explore the obstacle courses provided.</p>
+					          <p>A common birding destination, Hilltop Reservation is a nice strip of woods between Verona and North Caldwell. This peaceful, flat terain contains many trails, some of which pass over streams, creating a very calming getaway. </p>
 					          <p><b><a href="http://www.essexcountyparks.org/parks/hilltop-reservation" target="_blank">Visit Site</a></b></p>
 					          <span class="icon icon-location"></span>&nbsp&nbsp<strong><a href="https://goo.gl/maps/B2KHT" target="_blank">255 Fairview Avenue, Verona, NJ 07044</a></strong><br/>
 						      <span class="icon icon-phone"></span>&nbsp&nbsp(973) 268-3500</a> <br/>
@@ -571,7 +588,7 @@
 									  </a>
 									</div>
 						          </p>
-						          <p>This dog park provides a great social environment with breeds of all sizes for your critter to make friends with! It hosts a large enclosed area that allows your dog to roam free in the grass or sand and explore the obstacle courses provided.</p>
+						          <p>On hot days, this is a great park to escape to with it's large trees created a well-shaded and cool atmostphere. Your dog will be sure to make some friends as this is popular trail for people to walk their dogs.</p>
 						          <p><b><a href="http://www.essexcountyparks.org/parks/west-essex-park" target="_blank">Visit Site</a></b></p>
 						          <span class="icon icon-location"></span>&nbsp&nbsp<strong><a href="https://goo.gl/maps/ixzXw" target="_blank">Eagle Rock Avenue and Passaic River, Roseland, NJ 07068</a></strong><br/>
 							      <span class="icon icon-phone"></span>&nbsp&nbsp(973) 268-3500</a> <br/>
@@ -781,7 +798,7 @@
 							          <p>- For dogs that are a little more adventurous and active, we offer weekend camping trips at one of the Tri-State's wonderful and massive state parks. Offering many trails, lots of birds and critters, and expansive views, your dog will love his new camping experience! Pickup will be Friday or Saturday night and we'll arrive back at noon the following day.
 							          <br>- Warning: You may have an unexpectedly peaceful evening as your exhausted dog naps the rest of the day dreaming of the adventure.</p>
 							          <b>Complimentary </b><br>
-							          <p>Paw cleaning upon return, cute real-time pictures, treats(if allowed), excitement, love and kisses, and tummy rubs!</p>
+							          <p>Paw cleaning upon return, cute real-time pictures and video, treats(if allowed), excitement, love and kisses, and tummy rubs!</p>
 							          <b>Service Hours </b><br>
 							          <p>Fri - Sat:  ~6pm - 1pm <br>
 							          Sat - Sun:  6pm - 1pm </p>
@@ -935,13 +952,13 @@
 				<div class="col-sm-6 col-md-6">
 					<textarea class="form-control" name="message" rows="7" placeholder="Message"></textarea>
 				</div>
+				<input type="hidden" name="_next" value="https://formspree.io/thanks" />
+			    <!-- <input type="hidden" name="_subject" value="Contact Form Submission" />
+			    <input type="hidden" name="_cc" value="hanniabu@gmail.com" />
+			    <input type="text" name="_gotcha" style="display:none" /> -->
 				<div class="col-sm-6 col-md-12">
 					<p><a type="submit" id="submit" class="btn button" value="Send">Send</a></p>
 				</div>
-				<input type="hidden" name="_next" value="https://formspree.io/thanks" />
-			    <input type="hidden" name="_subject" value="Contact Form Submission" />
-			    <input type="hidden" name="_cc" value="hanniabu@gmail.com" />
-			    <input type="text" name="_gotcha" style="display:none" />
 			  </form>
 			</div>
 		  </div>
@@ -1024,7 +1041,7 @@
 		    if($(window).scrollTop() >= $('#contact').offset().top) {
 		      $('.modal').modal('hide');
 		    }
-		    if($(window).scrollTop() >= $('#calender').offset().top) {
+		    if($(window).scrollTop() >= $('#calender').offset().top-50) {
 		      $('.modal').modal('hide');
 		    }
 		});
