--- a/projects/fa/index.html
+++ b/projects/fa/index.html
@@ -954,8 +954,8 @@
 				</div>
 				<div class="col-sm-6 col-md-12">
 				<!-- TRy making a button instead of p>a -->
-					<!-- <p><a type="submit" id="submit" class="btn button" value="Send">Send</a></p> -->
-					<button type="submit" id="submit" class="btn" value="Send">Send</button>
+					<p><a type="submit" id="submit" class="btn button" value="Send">Send</a></p>
+					<!-- <button type="submit" id="submit" class="btn" value="Send">Send</button> -->
 				</div>
 				<input type="hidden" name="_next" value="https://formspree.io/thanks" />
 			    <input type="hidden" name="_subject" value="Contact Form Submission" />
